--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,7 @@
-name: Laura D. Hughes
-markdown: kramdown
-
-sass:
-  # loading path from site root
-  # default to _sass
-  sass_dir: bower_components/bootstrap-sass/assets/stylesheets
-
-  # style : nested (default), compact, compressed, expanded
-  #         :nested, :compact, :compressed, :expanded also works
-  # see http://sass-lang.com/documentation/file.SASS_REFERENCE.html#output_style
-  # on a typical twitter bootstrap stats are :
-  # nested 138,7kB, compact 129,1kB, expanded 135,9 kB, compressed 122,4 kB
-  style: compressed
+# Site settings
+title: Laura D. Hughes
+description: scientist, data scientist, visualizer
+keywords: Laura Hughes, data science, data visualization
+author: Laura Hughes
+baseurl: "" # the subpath of your site, e.g. /blog/
+url: "" # the base hostname & protocol for your site
